--- a/ManipulatingDataFrameswithPandas.ipynb
+++ b/ManipulatingDataFrameswithPandas.ipynb
@@ -294,6 +294,341 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Advance indexing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       eggs salt  spam\n",
+      "month                 \n",
+      "Jan      47   12    17\n",
+      "Feb     110   50    31\n",
+      "Mar     221   89    72\n",
+      "Apr      77   87    20\n",
+      "May     132  NaN    52\n",
+      "Jun     205   60    55\n",
+      "\n",
+      "\n",
+      "index upper\n",
+      "Index(['JAN', 'FEB', 'MAR', 'APR', 'MAY', 'JUN'], dtype='object', name='month')\n",
+      "index uppercase\n",
+      "Index(['jan', 'feb', 'mar', 'apr', 'may', 'jun'], dtype='object', name='month')\n",
+      "\n",
+      "\n",
+      "PRODUCTS  eggs salt  spam\n",
+      "month                    \n",
+      "jan         47   12    17\n",
+      "feb        110   50    31\n",
+      "mar        221   89    72\n",
+      "apr         77   87    20\n",
+      "may        132  NaN    52\n",
+      "jun        205   60    55\n",
+      "\n",
+      "\n",
+      "PRODUCTS  eggs salt  spam\n",
+      "0           47   12    17\n",
+      "1          110   50    31\n",
+      "2          221   89    72\n",
+      "3           77   87    20\n",
+      "4          132  NaN    52\n",
+      "5          205   60    55\n",
+      "\n",
+      "\n",
+      "PRODUCTS  eggs salt  spam\n",
+      "Jan         47   12    17\n",
+      "Feb        110   50    31\n",
+      "Mar        221   89    72\n",
+      "Apr         77   87    20\n",
+      "May        132  NaN    52\n",
+      "Jun        205   60    55\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "# sales_dict = {'eggs': {'Apr': 77, 'Feb': 110, 'Jan': 47, 'Jun': 205, 'Mar': 221},\n",
+    "#  'salt': {'Apr': 87.0, 'Feb': 50.0, 'Jan': 12.0, 'Jun': 60.0, 'Mar': 89.0},\n",
+    "#  'spam': {'Apr': 20, 'Feb': 31, 'Jan': 17, 'Jun': 55, 'Mar': 72}}\n",
+    "\n",
+    "\n",
+    "# sales = pd.DataFrame(sales_dict)\n",
+    "# sales.head()\n",
+    "\n",
+    "s_dict = {'eggs': {'Jan': 47, 'Feb': 110, 'Mar': 221, 'Apr': 77, 'May': 132, 'Jun': 205}, 'salt': {'Jan': 12.0, 'Feb': 50.0, 'Mar': 89.0, 'Apr': 87.0, 'May': 0, 'Jun': 60.0}, 'spam': {'Jan': 17, 'Feb': 31, 'Mar': 72, 'Apr': 20, 'May': 52, 'Jun': 55}}\n",
+    "\n",
+    "sales = pd.DataFrame(s_dict)\n",
+    "\n",
+    "sales.loc['May', 'salt'] = 'NaN'\n",
+    "sales.index.name = 'month'\n",
+    "print(sales.head(6))\n",
+    "print('\\n')\n",
+    "\n",
+    "# sales.index.map(str.capitalize)\n",
+    "\n",
+    "sales.index = sales.index.map(str.upper)\n",
+    "print('index upper')\n",
+    "print(sales.index)\n",
+    "sales.index = sales.index.str.lower()\n",
+    "print('index uppercase')\n",
+    "print(sales.index)\n",
+    "\n",
+    "print('\\n')\n",
+    "sales.columns.name ='PRODUCTS'\n",
+    "print(sales)\n",
+    "\n",
+    "\n",
+    "#Possible error is \n",
+    "# sales.index[0] = 'JAN'                       \"\"\" cannot mutate the index\"\"\"\n",
+    "# sales.index[0] = sales.index[0].upper()      \"\"\" cannot mutate the index\"\"\"\n",
+    "sales.index = range(len(sales))            # can ! \n",
+    "print('\\n')\n",
+    "print(sales.head(6)) \n",
+    "\n",
+    "# buil df index from list and put them together\n",
+    "# Generate the list of months: months\n",
+    "months = ['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun']\n",
+    "\n",
+    "# Assign months to sales.index\n",
+    "sales.index = months\n",
+    "print('\\n')\n",
+    "print(sales)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "extracting with multi-index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      eggs  salt  spam\n",
+      "CA 1    47  12.0    17\n",
+      "   2   110  50.0    31\n",
+      "TX 2   205  60.0    55\n",
+      "      eggs  salt  spam\n",
+      "CA 1    47  12.0    17\n",
+      "   2   110  50.0    31\n",
+      "NY 1   221  89.0    72\n",
+      "   2    77  87.0    20\n",
+      "TX 2   205  60.0    55\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "s_dict = {'eggs': {('CA', 1): 47,\n",
+    "  ('CA', 2): 110,\n",
+    "  ('NY', 1): 221,\n",
+    "  ('NY', 2): 77,\n",
+    "  ('TX', 2): 205},\n",
+    " 'salt': {('CA', 1): 12.0,\n",
+    "  ('CA', 2): 50.0,\n",
+    "  ('NY', 1): 89.0,\n",
+    "  ('NY', 2): 87.0,\n",
+    "  ('TX', 2): 60.0},\n",
+    " 'spam': {('CA', 1): 17,\n",
+    "  ('CA', 2): 31,\n",
+    "  ('NY', 1): 72,\n",
+    "  ('NY', 2): 20,\n",
+    "  ('TX', 2): 55}}\n",
+    "\n",
+    "sales = pd.DataFrame(s_dict)\n",
+    "\n",
+    "# sales.loc['May', 'salt'] = 'NaN'\n",
+    "\n",
+    "sales\n",
+    "\n",
+    "\n",
+    "# Print sales.loc[['CA', 'TX']]\n",
+    "print(sales.loc[['CA','TX']])\n",
+    "\n",
+    "# Print sales['CA':'TX']\n",
+    "print(sales['CA':'TX'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "set_index() list in tuple \n",
+    "after set_index() data is not sorting\n",
+    "Then\n",
+    "use sort_index()\n",
+    "\n",
+    "\n",
+    "multiple level of a multiindex"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   eggs  month  salt  spam state\n",
+      "0    47      1  12.0    17    CA\n",
+      "1   110      2  50.0    31    CA\n",
+      "2   221      1  89.0    72    NY\n",
+      "3    77      2  87.0    20    NY\n",
+      "5   205      2  60.0    55    TX\n",
+      "             eggs  salt  spam\n",
+      "state month                  \n",
+      "CA    1        47  12.0    17\n",
+      "      2       110  50.0    31\n",
+      "NY    1       221  89.0    72\n",
+      "      2        77  87.0    20\n",
+      "TX    2       205  60.0    55\n",
+      "\n",
+      "\n",
+      "             eggs  salt  spam\n",
+      "state month                  \n",
+      "NY    1       221  89.0    72\n",
+      "\n",
+      "\n",
+      "             eggs  salt  spam\n",
+      "state month                  \n",
+      "CA    2       110  50.0    31\n",
+      "TX    2       205  60.0    55\n",
+      "\n",
+      "\n",
+      "             eggs  salt  spam\n",
+      "state month                  \n",
+      "CA    2       110  50.0    31\n",
+      "NY    2        77  87.0    20\n",
+      "TX    2       205  60.0    55\n"
+     ]
+    }
+   ],
+   "source": [
+    "s_dict = {'eggs': {0: 47, 1: 110, 2: 221, 3: 77, 5: 205},\n",
+    " 'month': {0: 1, 1: 2, 2: 1, 3: 2, 5: 2},\n",
+    " 'salt': {0: 12.0, 1: 50.0, 2: 89.0, 3: 87.0, 5: 60.0},\n",
+    " 'spam': {0: 17, 1: 31, 2: 72, 3: 20, 5: 55},\n",
+    " 'state': {0: 'CA', 1: 'CA', 2: 'NY', 3: 'NY', 5: 'TX'}}\n",
+    "\n",
+    "sales = pd.DataFrame(s_dict)\n",
+    "print(sales) \n",
+    "\n",
+    "# Set the index to be the columns ['state', 'month']: sales\n",
+    "sales = sales.set_index(['state', 'month'])\n",
+    "\n",
+    "# Sort the MultiIndex: sales\n",
+    "sales = sales.sort_index()\n",
+    "\n",
+    "# Print the sales DataFrame\n",
+    "print(sales)\n",
+    "print('\\n')\n",
+    "\n",
+    "# Look up data for NY in month 1 in sales: NY_month1\n",
+    "NY_month1 = sales.loc[(['NY'], 1),:]\n",
+    "print(NY_month1)\n",
+    "\n",
+    "print('\\n')\n",
+    "# Look up data for CA and TX in month 2: CA_TX_month2\n",
+    "CA_TX_month2 = sales.loc[(['CA', 'TX'],  2),:]\n",
+    "print(CA_TX_month2)\n",
+    "\n",
+    "print('\\n')\n",
+    "# Access the inner month index and look up data for all states in month 2: all_month2\n",
+    "all_month2 = sales.loc[(slice(None),2),:]  #slice both index using slice(None) tuple only\n",
+    "print(all_month2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using .loc[] with nonunique indexes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   eggs  month  salt  spam state\n",
+      "0    47      1  12.0    17    CA\n",
+      "1   110      2  50.0    31    CA\n",
+      "2   221      1  89.0    72    NY\n",
+      "3    77      2  87.0    20    NY\n",
+      "5   205      2  60.0    55    TX\n",
+      "       eggs  month  salt  spam\n",
+      "state                         \n",
+      "CA       47      1  12.0    17\n",
+      "CA      110      2  50.0    31\n",
+      "NY      221      1  89.0    72\n",
+      "NY       77      2  87.0    20\n",
+      "TX      205      2  60.0    55\n",
+      "       eggs  month  salt  spam\n",
+      "state                         \n",
+      "NY      221      1  89.0    72\n",
+      "NY       77      2  87.0    20\n"
+     ]
+    }
+   ],
+   "source": [
+    "s_dict = {'eggs': {0: 47, 1: 110, 2: 221, 3: 77, 5: 205},\n",
+    " 'month': {0: 1, 1: 2, 2: 1, 3: 2, 5: 2},\n",
+    " 'salt': {0: 12.0, 1: 50.0, 2: 89.0, 3: 87.0, 5: 60.0},\n",
+    " 'spam': {0: 17, 1: 31, 2: 72, 3: 20, 5: 55},\n",
+    " 'state': {0: 'CA', 1: 'CA', 2: 'NY', 3: 'NY', 5: 'TX'}}\n",
+    "\n",
+    "sales = pd.DataFrame(s_dict)\n",
+    "print(sales)# Set the index to the column 'state': sales\n",
+    "sales = sales.set_index(['state'])\n",
+    "\n",
+    "# Print the sales DataFrame\n",
+    "print(sales)\n",
+    "\n",
+    "# Access the data from 'NY'\n",
+    "print(sales.loc['NY'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
