--- a/MachineLearning/Readme
+++ b/MachineLearning/Readme
@@ -1,1 +1,5 @@
 
+The essential skills to land a job as a machine learning scientist! 
+Python programming skill set with the toolbox to perform supervised, unsupervised, and deep learning. 
+How to process data for features, train your models, assess performance, and tune parameters for better performance. 
+In the process, an introduction to natural language processing, image processing, and popular libraries such as Spark and Keras.
